<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/black"
            android:paddingVertical="10dp"
            android:text="Calender"
           android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35sp"/>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView"
                    android:text="@string/_1" />
                <TextView
                    style="@style/TextView"
                    android:text="@string/_2" />
                <TextView
                   style="@style/TextView"
                    android:text="@string/_3" />
                <TextView
                    style="@style/TextView"
                    android:text="@string/_4" />

                <TextView
                    style="@style/TextView"
                    android:text="@string/_5" />

                <TextView
                    style="@style/TextView"
                    android:text="@string/_6" />
                <TextView
                    style="@style/TextView"
                    android:text="@string/_7" />
                <TextView
                    style="@style/TextView"
                    android:text="@string/_8" />
                <TextView
                    style="@style/TextView"
                    android:text="@string/_9" />
                <TextView
                    style="@style/TextView"
                    android:text="@string/_10" />
            </LinearLayout>
        </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
               style="@style/TextView"
                android:text="@string/_11" />
            <TextView
               style="@style/TextView"
                android:text="@string/_12" />
            <TextView
               style="@style/TextView"
                android:text="@string/_13" />
            <TextView
                style="@style/TextView"
                android:text="@string/_14" />

            <TextView
               style="@style/TextView"
                android:text="@string/_15" />

            <TextView
                style="@style/TextView"
                android:text="@string/_16" />
            <TextView
                style="@style/TextView"
                android:text="@string/_17" />
            <TextView
                style="@style/TextView"
                android:text="@string/_18" />
            <TextView
                style="@style/TextView"
                android:text="@string/_19"/>
            <TextView
                style="@style/TextView"
                android:text="@string/_20" />
        </LinearLayout>
    </HorizontalScrollView>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView"
                android:text="@string/_21" />
            <TextView
                style="@style/TextView"
                android:text="@string/_22" />
            <TextView
                style="@style/TextView"
                android:text="@string/_23" />
            <TextView
               style="@style/TextView"
                android:text="@string/_24" />

            <TextView
                style="@style/TextView"
                android:text="@string/_25" />

            <TextView
                style="@style/TextView"
                android:text="@string/_26" />
            <TextView
                style="@style/TextView"
                android:text="@string/_27" />
            <TextView
                style="@style/TextView"
                android:text="@string/_28" />
            <TextView
                style="@style/TextView"
                android:text="@string/_29"/>
            <TextView
                style="@style/TextView"
                android:text="@string/_30" />
        </LinearLayout>
    </HorizontalScrollView>



    </LinearLayout>